# cloudkeys

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
cloudkeys/: __init__.py  __main__.py  cli.py  connect.py  core.py  feeds.py  mcp_server.py  sarif.py
demos/01-basic/: SCENARIO.md  leaked_config.env
demos/04-aws-credentials-file/: SCENARIO.md  credentials
demos/05-gcp-api-key/: SCENARIO.md  firebase-config.js
demos/06-terraform-tfvars/: SCENARIO.md  terraform.tfvars
demos/07-ci-pipeline-env/: SCENARIO.md  deploy.yml
demos/08-kubernetes-secret/: SCENARIO.md  secret.yaml
demos/09-git-diff-precommit/: SCENARIO.md  staged.diff
demos/10-dotenv-clean-baseline/: .env.example  SCENARIO.md
demos/11-ip-attribution/: SCENARIO.md  leaked_with_endpoints.env
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_feeds.py  test_hardening.py  test_sarif.py  test_smoke.py
tests/fixtures/cognis-feeds/: aws-ip-ranges.data  aws-ip-ranges.meta.json  gcp-ip-ranges.data  gcp-ip-ranges.meta.json
