[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-cloudkeys"
version = "0.1.0"
description = "Find leaked cloud keys (AWS/GCP/Azure) + classify blast radius"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "tactical", "cloudkeys"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/cloudkeys"

[project.scripts]
cloudkeys = "cloudkeys.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cloudkeys"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]
